Few minor tweaks
Added a way for mod updating to remove obsolete mods
Added java args for (hopefully)better performance